Issue #17765: weakref.ref() no longer silently ignores keyword arguments. Patch by Georg Brandl.